PowerLog.Parser/Generated/PowerLogASTParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3 2012-10-23 20:51:18

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019




using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace PowerLog.Parser
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class PowerLogASTParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "DATA", "DIGIT", "EXERCISE", "EXERCISE_NAME", "FLAGGED_SET", "FLAGS", "FLOAT", "FORCED", "FR", "FTL", "LETTER", "MAX", "MESSAGE", "MULTI_SET", "NOTE", "NUMBER", "REP", "RESULT", "SET", "SETS", "SINGLE", "TF", "WEIGHT", "WORD", "WS", "X", "'('", "')'", "'-'", "';'"
	};
	public const int EOF=-1;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int DATA=4;
	public const int DIGIT=5;
	public const int EXERCISE=6;
	public const int EXERCISE_NAME=7;
	public const int FLAGGED_SET=8;
	public const int FLAGS=9;
	public const int FLOAT=10;
	public const int FORCED=11;
	public const int FR=12;
	public const int FTL=13;
	public const int LETTER=14;
	public const int MAX=15;
	public const int MESSAGE=16;
	public const int MULTI_SET=17;
	public const int NOTE=18;
	public const int NUMBER=19;
	public const int REP=20;
	public const int RESULT=21;
	public const int SET=22;
	public const int SETS=23;
	public const int SINGLE=24;
	public const int TF=25;
	public const int WEIGHT=26;
	public const int WORD=27;
	public const int WS=28;
	public const int X=29;

	public PowerLogASTParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public PowerLogASTParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return PowerLogASTParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_evaluate();
	partial void LeaveRule_evaluate();

	// $ANTLR start "evaluate"
	// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:36:8: public evaluate : exercise ( ';' exercise )* EOF -> ^( 'result' ( exercise )+ ) ;
	[GrammarRule("evaluate")]
	public AstParserRuleReturnScope<CommonTree, CommonToken> evaluate()
	{
		EnterRule_evaluate();
		EnterRule("evaluate", 1);
		TraceIn("evaluate", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal2 = default(CommonToken);
		CommonToken EOF4 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> exercise1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> exercise3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree char_literal2_tree = default(CommonTree);
		CommonTree EOF4_tree = default(CommonTree);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleITokenStream stream_33=new RewriteRuleITokenStream(adaptor,"token 33");
		RewriteRuleSubtreeStream stream_exercise=new RewriteRuleSubtreeStream(adaptor,"rule exercise");
		try { DebugEnterRule(GrammarFileName, "evaluate");
		DebugLocation(36, 6);
		try
		{
			// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:37:7: ( exercise ( ';' exercise )* EOF -> ^( 'result' ( exercise )+ ) )
			DebugEnterAlt(1);
			// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:37:11: exercise ( ';' exercise )* EOF
			{
			DebugLocation(37, 11);
			PushFollow(Follow._exercise_in_evaluate202);
			exercise1=exercise();
			PopFollow();

			stream_exercise.Add(exercise1.Tree);
			DebugLocation(37, 20);
			// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:37:20: ( ';' exercise )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==33))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:37:21: ';' exercise
					{
					DebugLocation(37, 21);
					char_literal2=(CommonToken)Match(input,33,Follow._33_in_evaluate205);  
					stream_33.Add(char_literal2);

					DebugLocation(37, 25);
					PushFollow(Follow._exercise_in_evaluate207);
					exercise3=exercise();
					PopFollow();

					stream_exercise.Add(exercise3.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(37, 36);
			EOF4=(CommonToken)Match(input,EOF,Follow._EOF_in_evaluate211);  
			stream_EOF.Add(EOF4);



			{
			// AST REWRITE
			// elements: RESULT, exercise
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 37:41: -> ^( 'result' ( exercise )+ )
			{
				DebugLocation(37, 45);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:37:45: ^( 'result' ( exercise )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(37, 47);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(RESULT, "RESULT"), root_1);

				DebugLocation(37, 56);
				if (!(stream_exercise.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_exercise.HasNext )
				{
					DebugLocation(37, 56);
					adaptor.AddChild(root_1, stream_exercise.NextTree());

				}
				stream_exercise.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("evaluate", 1);
			LeaveRule("evaluate", 1);
			LeaveRule_evaluate();
		}
		DebugLocation(38, 6);
		} finally { DebugExitRule(GrammarFileName, "evaluate"); }
		return retval;

	}
	// $ANTLR end "evaluate"

	partial void EnterRule_annotatedSet();
	partial void LeaveRule_annotatedSet();

	// $ANTLR start "annotatedSet"
	// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:40:1: annotatedSet : set ( forced | note | flag )* -> ^( 'flagged_set' set ^( 'flags' ( flag )* ( forced )? ( note )? ) ) ;
	[GrammarRule("annotatedSet")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> annotatedSet()
	{
		EnterRule_annotatedSet();
		EnterRule("annotatedSet", 2);
		TraceIn("annotatedSet", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> set5 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> forced6 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> note7 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> flag8 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		RewriteRuleSubtreeStream stream_flag=new RewriteRuleSubtreeStream(adaptor,"rule flag");
		RewriteRuleSubtreeStream stream_set=new RewriteRuleSubtreeStream(adaptor,"rule set");
		RewriteRuleSubtreeStream stream_note=new RewriteRuleSubtreeStream(adaptor,"rule note");
		RewriteRuleSubtreeStream stream_forced=new RewriteRuleSubtreeStream(adaptor,"rule forced");
		try { DebugEnterRule(GrammarFileName, "annotatedSet");
		DebugLocation(40, 6);
		try
		{
			// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:7: ( set ( forced | note | flag )* -> ^( 'flagged_set' set ^( 'flags' ( flag )* ( forced )? ( note )? ) ) )
			DebugEnterAlt(1);
			// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:11: set ( forced | note | flag )*
			{
			DebugLocation(41, 11);
			PushFollow(Follow._set_in_annotatedSet245);
			set5=set();
			PopFollow();

			stream_set.Add(set5.Tree);
			DebugLocation(41, 15);
			// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:15: ( forced | note | flag )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=4;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==32))
				{
					switch (input.LA(2))
					{
					case FR:
						{
						alt2 = 1;
						}
						break;
					case NOTE:
						{
						alt2 = 2;
						}
						break;
					case FTL:
					case MAX:
					case TF:
						{
						alt2 = 3;
						}
						break;
					}

				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:16: forced
					{
					DebugLocation(41, 16);
					PushFollow(Follow._forced_in_annotatedSet248);
					forced6=forced();
					PopFollow();

					stream_forced.Add(forced6.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:23: note
					{
					DebugLocation(41, 23);
					PushFollow(Follow._note_in_annotatedSet250);
					note7=note();
					PopFollow();

					stream_note.Add(note7.Tree);

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:28: flag
					{
					DebugLocation(41, 28);
					PushFollow(Follow._flag_in_annotatedSet252);
					flag8=flag();
					PopFollow();

					stream_flag.Add(flag8.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }



			{
			// AST REWRITE
			// elements: note, set, forced, FLAGS, flag, FLAGGED_SET
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 41:41: -> ^( 'flagged_set' set ^( 'flags' ( flag )* ( forced )? ( note )? ) )
			{
				DebugLocation(41, 45);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:45: ^( 'flagged_set' set ^( 'flags' ( flag )* ( forced )? ( note )? ) )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(41, 47);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FLAGGED_SET, "FLAGGED_SET"), root_1);

				DebugLocation(41, 61);
				adaptor.AddChild(root_1, stream_set.NextTree());
				DebugLocation(41, 65);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:65: ^( 'flags' ( flag )* ( forced )? ( note )? )
				{
				CommonTree root_2 = (CommonTree)adaptor.Nil();
				DebugLocation(41, 67);
				root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FLAGS, "FLAGS"), root_2);

				DebugLocation(41, 75);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:75: ( flag )*
				while ( stream_flag.HasNext )
				{
					DebugLocation(41, 75);
					adaptor.AddChild(root_2, stream_flag.NextTree());

				}
				stream_flag.Reset();
				DebugLocation(41, 81);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:81: ( forced )?
				if (stream_forced.HasNext)
				{
					DebugLocation(41, 81);
					adaptor.AddChild(root_2, stream_forced.NextTree());

				}
				stream_forced.Reset();
				DebugLocation(41, 89);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:41:89: ( note )?
				if (stream_note.HasNext)
				{
					DebugLocation(41, 89);
					adaptor.AddChild(root_2, stream_note.NextTree());

				}
				stream_note.Reset();

				adaptor.AddChild(root_1, root_2);
				}

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("annotatedSet", 2);
			LeaveRule("annotatedSet", 2);
			LeaveRule_annotatedSet();
		}
		DebugLocation(42, 6);
		} finally { DebugExitRule(GrammarFileName, "annotatedSet"); }
		return retval;

	}
	// $ANTLR end "annotatedSet"

	partial void EnterRule_set();
	partial void LeaveRule_set();

	// $ANTLR start "set"
	// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:44:1: set : ( sets X reps X weight -> ^( 'multi_set' ^( 'sets' sets ) ^( 'rep' reps ) ^( 'weight' weight ) ) | reps X weight -> ^( 'set' ^( 'rep' reps ) ^( 'weight' weight ) ) | weight -> ^( 'set' ^( 'rep' 'single' ) ^( 'weight' weight ) ) );
	[GrammarRule("set")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> set()
	{
		EnterRule_set();
		EnterRule("set", 3);
		TraceIn("set", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken X10 = default(CommonToken);
		CommonToken X12 = default(CommonToken);
		CommonToken X15 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> sets9 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> reps11 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> weight13 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> reps14 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> weight16 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> weight17 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree X10_tree = default(CommonTree);
		CommonTree X12_tree = default(CommonTree);
		CommonTree X15_tree = default(CommonTree);
		RewriteRuleITokenStream stream_X=new RewriteRuleITokenStream(adaptor,"token X");
		RewriteRuleSubtreeStream stream_reps=new RewriteRuleSubtreeStream(adaptor,"rule reps");
		RewriteRuleSubtreeStream stream_weight=new RewriteRuleSubtreeStream(adaptor,"rule weight");
		RewriteRuleSubtreeStream stream_sets=new RewriteRuleSubtreeStream(adaptor,"rule sets");
		try { DebugEnterRule(GrammarFileName, "set");
		DebugLocation(44, 6);
		try
		{
			// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:45:7: ( sets X reps X weight -> ^( 'multi_set' ^( 'sets' sets ) ^( 'rep' reps ) ^( 'weight' weight ) ) | reps X weight -> ^( 'set' ^( 'rep' reps ) ^( 'weight' weight ) ) | weight -> ^( 'set' ^( 'rep' 'single' ) ^( 'weight' weight ) ) )
			int alt3=3;
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==NUMBER))
			{
				int LA3_1 = input.LA(2);

				if ((LA3_1==X))
				{
					int LA3_3 = input.LA(3);

					if ((LA3_3==NUMBER))
					{
						int LA3_4 = input.LA(4);

						if ((LA3_4==X))
						{
							alt3 = 1;
						}
						else if ((LA3_4==EOF||LA3_4==WS||(LA3_4>=32 && LA3_4<=33)))
						{
							alt3 = 2;
						}
						else
						{
							NoViableAltException nvae = new NoViableAltException("", 3, 4, input);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}
					else if ((LA3_3==FLOAT))
					{
						alt3 = 2;
					}
					else
					{
						NoViableAltException nvae = new NoViableAltException("", 3, 3, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA3_1==EOF||LA3_1==WS||(LA3_1>=32 && LA3_1<=33)))
				{
					alt3 = 3;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 3, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else if ((LA3_0==FLOAT))
			{
				alt3 = 3;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:45:11: sets X reps X weight
				{
				DebugLocation(45, 11);
				PushFollow(Follow._sets_in_set313);
				sets9=sets();
				PopFollow();

				stream_sets.Add(sets9.Tree);
				DebugLocation(45, 16);
				X10=(CommonToken)Match(input,X,Follow._X_in_set315);  
				stream_X.Add(X10);

				DebugLocation(45, 18);
				PushFollow(Follow._reps_in_set317);
				reps11=reps();
				PopFollow();

				stream_reps.Add(reps11.Tree);
				DebugLocation(45, 23);
				X12=(CommonToken)Match(input,X,Follow._X_in_set319);  
				stream_X.Add(X12);

				DebugLocation(45, 25);
				PushFollow(Follow._weight_in_set321);
				weight13=weight();
				PopFollow();

				stream_weight.Add(weight13.Tree);


				{
				// AST REWRITE
				// elements: weight, WEIGHT, reps, sets, REP, SETS, MULTI_SET
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (CommonTree)adaptor.Nil();
				// 45:41: -> ^( 'multi_set' ^( 'sets' sets ) ^( 'rep' reps ) ^( 'weight' weight ) )
				{
					DebugLocation(45, 45);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:45:45: ^( 'multi_set' ^( 'sets' sets ) ^( 'rep' reps ) ^( 'weight' weight ) )
					{
					CommonTree root_1 = (CommonTree)adaptor.Nil();
					DebugLocation(45, 47);
					root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(MULTI_SET, "MULTI_SET"), root_1);

					DebugLocation(45, 59);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:45:59: ^( 'sets' sets )
					{
					CommonTree root_2 = (CommonTree)adaptor.Nil();
					DebugLocation(45, 61);
					root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(SETS, "SETS"), root_2);

					DebugLocation(45, 68);
					adaptor.AddChild(root_2, stream_sets.NextTree());

					adaptor.AddChild(root_1, root_2);
					}
					DebugLocation(45, 74);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:45:74: ^( 'rep' reps )
					{
					CommonTree root_2 = (CommonTree)adaptor.Nil();
					DebugLocation(45, 76);
					root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(REP, "REP"), root_2);

					DebugLocation(45, 82);
					adaptor.AddChild(root_2, stream_reps.NextTree());

					adaptor.AddChild(root_1, root_2);
					}
					DebugLocation(45, 88);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:45:88: ^( 'weight' weight )
					{
					CommonTree root_2 = (CommonTree)adaptor.Nil();
					DebugLocation(45, 90);
					root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(WEIGHT, "WEIGHT"), root_2);

					DebugLocation(45, 99);
					adaptor.AddChild(root_2, stream_weight.NextTree());

					adaptor.AddChild(root_1, root_2);
					}

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:46:11: reps X weight
				{
				DebugLocation(46, 11);
				PushFollow(Follow._reps_in_set367);
				reps14=reps();
				PopFollow();

				stream_reps.Add(reps14.Tree);
				DebugLocation(46, 16);
				X15=(CommonToken)Match(input,X,Follow._X_in_set369);  
				stream_X.Add(X15);

				DebugLocation(46, 18);
				PushFollow(Follow._weight_in_set371);
				weight16=weight();
				PopFollow();

				stream_weight.Add(weight16.Tree);


				{
				// AST REWRITE
				// elements: SET, weight, REP, WEIGHT, reps
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (CommonTree)adaptor.Nil();
				// 46:41: -> ^( 'set' ^( 'rep' reps ) ^( 'weight' weight ) )
				{
					DebugLocation(46, 45);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:46:45: ^( 'set' ^( 'rep' reps ) ^( 'weight' weight ) )
					{
					CommonTree root_1 = (CommonTree)adaptor.Nil();
					DebugLocation(46, 47);
					root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(SET, "SET"), root_1);

					DebugLocation(46, 53);
					// C:\\Users\\Bacon\\Documents\\Visual Studio 2012\\Projects\\REPO\\PowerLog\\PowerLog.Parser\\Generated\\PowerLogAST.g3:46:53: ^( 'rep' reps )
					{
					CommonTree root_2 = (CommonTree)adaptor.Nil();
					DebugLocation(46, 55);
					root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(REP, "REP"), root_2);

					DebugLocation(46, 61);
					adaptor.AddChild(root_2, stream_reps.NextTree());

					adaptor.AddChild(root_1, root_2);
					}
					DebugLocation(46, 67);
